# Begin

./: .gitignore  ON3.html  README.md  docker-compose.yml  start.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  seed_demo.py  setup_venv.sh  structured_fortune_service.py
backend/app/: agui_endpoint.py  config.py  copilotkit_endpoint.py  main.py
backend/app/agent/: agui_graph.py  graph.py  prompts.py  tools.py
backend/app/api/: auth.py  diary.py  fortune.py  user.py
backend/app/core/: config.py  db.py  genai_service.py
backend/app/models/: chat.py  diary.py  fortune.py  user.py
backend/app/services/: bazi_service.py  bazi_translations.py  daily_activity_service.py  enhanced_genai_service.py  fal_service.py  fortune_scoring_engine.py  genai_service.py  knowledge_service.py  letta_service.py  memory_service.py  special_pattern_service.py  structured_fortune_service.py  tarot_service.py  tts_service.py  vector_service.py  version_switcher.py
backend/tests/: test_thinking_feasibility.py
docs/: agui_endpoint.py  guide.md
frontend/: .env.local  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  web2.html
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/app/components/: BaseChip.tsx  BaziChip.tsx  CelestialPanel.tsx  ChatOverlay.tsx  DiarySearchChip.tsx  DiaryTab.tsx  FortuneTab.tsx  LoginPage.tsx  TarotChip.tsx  ThinkingBubble.tsx
frontend/app/contexts/: AuthContext.tsx
frontend/app/home/: page.tsx
frontend/app/i18n/: en-US.ts  index.ts  zh-CN.ts
frontend/app/lib/: api.ts  theme.ts
frontend/public/: fortune-payload.html
frontend/public/imgs/: index.js
