[project]
name = "fortunediary-backend"
version = "0.1.0"
description = "FortuneDiary Backend — LangGraph agent with AG-UI protocol"
requires-python = ">=3.11"
dependencies = [
    # --- Core ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",

    # --- LangChain / LangGraph ---
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.1.0",

    # --- LangGraph Postgres checkpointer (for legacy chat endpoint) ---
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.1.0",

    # --- AG-UI protocol ---
    "ag-ui-core>=0.1.0",
    "ag-ui-encoder>=0.1.0",

    # --- CopilotKit SDK ---
    "copilotkit>=0.1.0",

    # --- Supabase ---
    "supabase>=2.0.0",

    # --- Google Generative AI (embeddings) ---
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
