[project]
name = "fortunediary-backend"
version = "0.1.0"
description = "FortuneDiary Backend — LangGraph agent with CopilotKit"
requires-python = ">=3.11"
dependencies = [
    # --- Core ---
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "pydantic[email]",

    # --- LangChain / LangGraph ---
    "langchain>=1.0",
    "langgraph",
    "langchain-core",
    "langchain-google-genai",

    # --- LangGraph Postgres checkpointer ---
    "langgraph-checkpoint-postgres",
    "psycopg[binary,pool]",

    # --- CopilotKit SDK + AG-UI ---
    "copilotkit>=0.1.78",
    "ag-ui-langgraph",

    # --- Supabase ---
    "supabase",

    # --- Google Generative AI ---
    "google-generativeai",

    # --- Structured generation ---
    "instructor",

    # --- Letta user profiles ---
    "letta-client",
    
    # --- Chinese lunar calendar (for fortune calculations) ---
    "cnlunar",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
